--- a/src/style.css
+++ b/src/style.css
@@ -13,9 +13,9 @@
 	--fw-900: 900;
 
 	--clr-primary-200: hsla(169, 70%, 95%, 1);
-	--clr-primary-300: hsla(169, 100%, 39%, 1);
-	--clr-primary-400: hsla(169, 100%, 26%, 1);
-	--clr-primary-500: hsla(169, 100%, 16%, 1);
+	--clr-primary-300: rgb(49, 0, 217);
+	--clr-primary-400: rgb(49, 0, 217);
+	--clr-primary-500: rgb(29, 0, 98);
 
 	--clr-neutral-100: hsla(0, 0%, 100%, 1);
 	--clr-neutral-300: hsla(0, 0%, 50%, 1);
@@ -137,9 +137,14 @@ strong {
 	font-weight: var(--fw-700);
 }
 
+main {
+	background-color: #ECF1FD;
+}
+
 section,
 .section {
-	padding: min(10vh, 10em) 0;
+	padding: min(10vh, 0em) 0;
+	background-color: #ECF1FD;
 }
 
 /* body {
@@ -151,9 +156,10 @@ background-color: rgb(9, 9, 107);
 	overflow: hidden;
 	display: flex;
 	padding-bottom: 10vw;
+	background-color: white;
 }
 
-svg {
+.hero-svg {
 	float: right;
 	align-self: flex-end;
 	justify-self: right;
@@ -164,12 +170,8 @@ svg {
 }
 
 .hero-txt {
-	/* position: relative; */
 	padding: 7vw;
 	align-self: flex-end;
-
-	/* margin-bottom: 30vw; */
-	/* text-align: center; */
 }
 
 .hero-txt h1 {
@@ -183,22 +185,177 @@ svg {
 
 .section-title {
 	text-align: center;
+	margin: 6rem;
 }
 
 .featured-articles {
-	background-color: var(--clr-primary-200);
+	/* background-color: #ECF1FD; */
 }
 
 .articles__list {
 	--flow-spacer: 3rem;
-	margin: 6rem 0;
+	/* margin: 6rem 0; */
+}
+
+/* snippits */
+
+
+
+
+
+.snippet {
+	display: grid;
+	gap: 1em;
+	grid-template-areas:
+	  "image"
+	  "title"
+	  "meta"
+	  "body"
+	  "button";
+  }
+  
+  .snippet__image {
+	grid-area: image;
+	width: 100%;
+	aspect-ratio: 4 / 3;
+	object-fit: cover;
+  }
+  .snippet__title {
+	grid-area: title;
+  }
+  .snippet__meta {
+	grid-area: meta;
+	color: var(--clr-neutral-300);
+  }
+  
+  .snippet__meta span {
+	color: var(--clr-neutral-900);
+  }
+  
+  .snippet .btn {
+	grid-area: button;
+  }
+  
+  .snippet__title {
+	color: var(--clr-neutral-900);
+	font-size: var(--fs-500);
+  }
+  
+  .snippet__title a {
+	color: inherit;
+	text-decoration: none;
+  }
+  
+  .snippet__title a:hover,
+  .snippet__title a:focus {
+	color: var(--clr-primary-500);
+  } 
+  
+  @media (min-width: 45em) {
+	.snippet {
+	  grid-template-areas:
+		"title image"
+		"meta image"
+		"body image"
+		"button image";
+	  grid-column-gap: 4em;
+	  grid-template-columns: 1fr 40%;
+	  grid-template-rows: min-content min-content min-content 1fr;
+	}
+  }
+  
+  .btn {
+	cursor: pointer;
+	text-decoration: none;
+	display: inline-block;
+	line-height: 1;
+	padding: 0.75em 1.75em;
+	border-radius: 0.25em;
+	align-self: start;
+	justify-self: start;
+  }
+  
+  .btn:focus {
+	outline: 0.125em solid var(--clr-primary-400);
+	outline-offset: 0.25em;
+  }
+  
+  .btn--primary {
+	background: var(--clr-primary-400);
+	color: var(--clr-neutral-100);
+	font-weight: var(--fw-700);
+	border: 2px solid var(--clr-primary-400);
+  }
+  .btn--primary:hover,
+  .btn--primary:focus {
+	background: var(--clr-primary-500);
+	border-color: var(--clr-primary-500); 
+  }
+  
+  .btn--neutral {
+	background-color: var(--clr-neutral-100);
+	color: var(--clr-neutral-900);
+	font-weight: var(--fw-700);
+	border: 2px solid var(--clr-neutral-900);
+  }
+  
+  .btn--neutral:hover,
+  .btn--neutral:focus {
+	color: var(--clr-neutral-100);
+	background-color: var(--clr-neutral-900);
+  }
+
+  /* .dictionary {
+	  background-color: #34366A;
+  } */
+
+  .dict {
+	  background-color: #34366A;
+	  color: white;
+  }
+
+.dict-svg {
+	width: 100%;
+	height: 100%;
+	margin-bottom: 0;
+	background-color: #ECF1FD;
+	/* transform: translateY(100px); */
+}
+
+.scroller {
+	display: grid;
+	gap: 3rem;
+	grid-auto-flow: column;
+	grid-auto-columns: 68%;
+	overflow-x: auto;
+	overscroll-behavior-inline: contain;
+
+}
+
+.dict-title {
+	margin-top: 1rem;
+}
+
+.dict-snippet {
+	padding: 3rem;
+	height: fit-content;
+	margin-bottom: 1rem;
+	background-color: #282a67;
+	border-radius: 2rem;
+}
+
+.dict-snippet::-webkit-scrollbar {
+	display: none;
+  }
+
+.dict-word {
+	margin-bottom: 1rem;
 }
 
 /* MOBILE */
 
 @media (max-width: 450px) {
-	svg {
-		/* position: relative; */
+	.hero-svg {
 		float: right;
 		align-self: flex-end;
 		justify-self: right;
@@ -206,7 +363,6 @@ svg {
 		height: 100%;
 
 		transform: translateX(11%) translateY(-15%);
-		/* overflow: hidden; */
 	}
 	.hero {
 		flex-direction: column-reverse;
@@ -217,16 +373,12 @@ svg {
 /* DESKTOP */
 
 @media (min-width: 450px) {
-	svg {
-		/* position: relative; */
+	.hero-svg {
 		float: right;
 		align-self: flex-end;
 		justify-self: right;
 
-		/* width: 00%; */
-
 		transform: translateX(11%) translateY(-15%);
-		/* overflow: hidden;  */
 	}
 
 	.hero {
@@ -245,5 +397,9 @@ svg {
 
 	.hero-txt div {
 		font-size: 2vw;
+	}
+
+	.snippet {
+	margin: 5rem;
 	}
 }
