--- a/src/style.css
+++ b/src/style.css
@@ -138,13 +138,13 @@ strong {
 }
 
 main {
-	background-color: #ECF1FD;
+	background-color: #ecf1fd;
 }
 
 section,
 .section {
 	padding: min(10vh, 0em) 0;
-	background-color: #ECF1FD;
+	background-color: #ecf1fd;
 }
 
 /* body {
@@ -199,72 +199,69 @@ background-color: rgb(9, 9, 107);
 
 /* snippits */
 
-
-
-
-
 .snippet {
+	margin: 10vw;
 	display: grid;
 	gap: 1em;
 	grid-template-areas:
-	  "image"
-	  "title"
-	  "meta"
-	  "body"
-	  "button";
-  }
-  
-  .snippet__image {
+		"image"
+		"title"
+		"meta"
+		"body"
+		"button";
+}
+
+.snippet__image {
 	grid-area: image;
 	width: 100%;
 	aspect-ratio: 4 / 3;
 	object-fit: cover;
-  }
-  .snippet__title {
+}
+.snippet__title {
 	grid-area: title;
-  }
-  .snippet__meta {
+}
+.snippet__meta {
 	grid-area: meta;
 	color: var(--clr-neutral-300);
-  }
-  
-  .snippet__meta span {
+}
+
+.snippet__meta span {
 	color: var(--clr-neutral-900);
-  }
-  
-  .snippet .btn {
+}
+
+.snippet .btn {
 	grid-area: button;
-  }
-  
-  .snippet__title {
+}
+
+.snippet__title {
 	color: var(--clr-neutral-900);
 	font-size: var(--fs-500);
-  }
-  
-  .snippet__title a {
+}
+
+.snippet__title a {
 	color: inherit;
 	text-decoration: none;
-  }
-  
-  .snippet__title a:hover,
-  .snippet__title a:focus {
+}
+
+.snippet__title a:hover,
+.snippet__title a:focus {
 	color: var(--clr-primary-500);
-  } 
-  
-  @media (min-width: 45em) {
+}
+
+@media (min-width: 45em) {
 	.snippet {
-	  grid-template-areas:
-		"title image"
-		"meta image"
-		"body image"
-		"button image";
-	  grid-column-gap: 4em;
-	  grid-template-columns: 1fr 40%;
-	  grid-template-rows: min-content min-content min-content 1fr;
+		grid-template-areas:
+			"title image"
+			"meta image"
+			"body image"
+			"button image";
+		grid-column-gap: 4em;
+		grid-template-columns: 1fr 40%;
+		grid-template-rows: min-content min-content min-content 1fr;
 	}
-  }
-  
-  .btn {
+}
+
+.btn {
 	cursor: pointer;
 	text-decoration: none;
 	display: inline-block;
@@ -273,52 +270,53 @@ background-color: rgb(9, 9, 107);
 	border-radius: 0.25em;
 	align-self: start;
 	justify-self: start;
-  }
-  
-  .btn:focus {
+}
+
+.btn:focus {
 	outline: 0.125em solid var(--clr-primary-400);
 	outline-offset: 0.25em;
-  }
-  
-  .btn--primary {
+}
+
+.btn--primary {
 	background: var(--clr-primary-400);
 	color: var(--clr-neutral-100);
 	font-weight: var(--fw-700);
 	border: 2px solid var(--clr-primary-400);
-  }
-  .btn--primary:hover,
-  .btn--primary:focus {
+}
+.btn--primary:hover,
+.btn--primary:focus {
 	background: var(--clr-primary-500);
-	border-color: var(--clr-primary-500); 
-  }
-  
-  .btn--neutral {
+	border-color: var(--clr-primary-500);
+}
+
+.btn--neutral {
 	background-color: var(--clr-neutral-100);
 	color: var(--clr-neutral-900);
 	font-weight: var(--fw-700);
 	border: 2px solid var(--clr-neutral-900);
-  }
-  
-  .btn--neutral:hover,
-  .btn--neutral:focus {
+}
+
+.btn--neutral:hover,
+.btn--neutral:focus {
 	color: var(--clr-neutral-100);
 	background-color: var(--clr-neutral-900);
-  }
+}
 
-  /* .dictionary {
+/* .dictionary {
 	  background-color: #34366A;
   } */
 
-  .dict {
-	  background-color: #34366A;
-	  color: white;
-  }
+.dict {
+	background-color: #34366a;
+	color: white;
+}
 
 .dict-svg {
 	width: 100%;
 	height: 100%;
-	margin-bottom: 0;
-	background-color: #ECF1FD;
+	/* margin-bottom: 0; */
+	background: linear-gradient(#ecf1fd 99%, #34366a 1%);
+	/* z-index: -1; */
 	/* transform: translateY(100px); */
 }
 
@@ -326,10 +324,19 @@ background-color: rgb(9, 9, 107);
 	display: grid;
 	gap: 3rem;
 	grid-auto-flow: column;
-	grid-auto-columns: 68%;
+	grid-auto-columns: 38%;
 	overflow-x: auto;
 	overscroll-behavior-inline: contain;
+}
 
+.snaps-inline {
+	padding-left: 0.5em;
+	scroll-snap-type: inline mandatory;
+	scroll-padding-inline: 0.5em;
+}
+
+.snaps-inline > * {
+	scroll-snap-align: start;
 }
 
 .dict-title {
@@ -337,19 +344,26 @@ background-color: rgb(9, 9, 107);
 }
 
 .dict-snippet {
-	padding: 3rem;
+	padding: 2.5rem;
 	height: fit-content;
-	margin-bottom: 1rem;
+	margin-bottom: 3rem;
 	background-color: #282a67;
+	/* background-color: white;
+	color: black; */
 	border-radius: 2rem;
 }
 
 .dict-snippet::-webkit-scrollbar {
 	display: none;
-  }
+}
 
 .dict-word {
 	margin-bottom: 1rem;
+}
+
+img {
+	background-color: aqua;
+	border-radius: 25px;
 }
 
 /* MOBILE */
@@ -368,6 +382,25 @@ background-color: rgb(9, 9, 107);
 		flex-direction: column-reverse;
 		padding-bottom: 30vw;
 	}
+	.dict {
+		overflow: hidden;
+		align-items: center;
+		justify-content: center;
+	}
+	.dict-svg {
+		/* overflow: hidden; */
+		width: 400%;
+		align-self: center;
+		justify-self: center;
+		text-align: center;
+		transform: translateX(-37.5%);
+	}
+	.scroller {
+		grid-auto-columns: 68%;
+	}
+	.dict-word-meaning {
+		font-size: 0.9rem;
+	}
 }
 
 /* DESKTOP */
@@ -379,9 +412,6 @@ background-color: rgb(9, 9, 107);
 		justify-self: right;
 
 		transform: translateX(11%) translateY(-15%);
-	}
-
-	.hero {
 	}
 
 	.hero-txt {
@@ -400,6 +430,6 @@ background-color: rgb(9, 9, 107);
 	}
 
 	.snippet {
-	margin: 5rem;
+		margin: 5rem;
 	}
 }
