--- a/src/style.css
+++ b/src/style.css
@@ -133,7 +133,6 @@ body {
 	color: var(--clr-neutral-900);
 }
 
-
 h1,
 h2,
 h3 {
@@ -157,7 +156,6 @@ section,
 	background-color: #ecf1fd;
 }
 
-
 .hero {
 	overflow: hidden;
 	display: flex;
@@ -175,15 +173,15 @@ section,
 }
 
 #Group-4 {
-animation: swing 4s ease-in-out infinite alternate-reverse;
-transform-origin: top;
-transform-box: fill-box;
+	animation: swing 4s ease-in-out infinite alternate-reverse;
+	transform-origin: top;
+	transform-box: fill-box;
 }
 
 #Group-6 {
 	animation: swing2 3s ease-in-out infinite alternate-reverse;
-transform-origin: top;
-transform-box: fill-box;
+	transform-origin: top;
+	transform-box: fill-box;
 }
 
 @keyframes swing {
@@ -193,7 +191,6 @@ transform-box: fill-box;
 	to {
 		transform: rotateZ(-5deg);
 	}
-
 }
 
 @keyframes swing2 {
@@ -203,7 +200,6 @@ transform-box: fill-box;
 	to {
 		transform: rotateZ(4deg);
 	}
-
 }
 
 .hero-txt {
@@ -226,8 +222,6 @@ transform-box: fill-box;
 	margin: 6rem;
 }
 
-
-
 .articles__list {
 	--flow-spacer: 3rem;
 	/* margin: 6rem 0; */
@@ -235,10 +229,65 @@ transform-box: fill-box;
 
 /* snippits */
 
+/* .articles__list {
+	display: grid;
+	/* grid-template-columns: repeat(4, 1fr); 
+	grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+	/* width: 90%; 
+	margin: auto;
+	max-width: 1300px;
+}
+
+.snippet {
+	display: grid;
+	grid-template-columns: auto;
+	grid-template-rows: 180px 70px auto;
+	grid-template-areas: "image" "title" "text";
+	/* gap: 100px; 
+	/* height: 100px; 
+	border-radius: 5px;
+	background: white;
+	box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.2);
+	transition: 0.2s ease;
+	/* cursor: pointer; 
+	margin: 20px;
+	overflow: hidden;
+}
+
+.snippet:hover {
+	box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.5);
+	transition: box-shadow 0.5s ease-in-out;
+}
+
+.snippet:hover > .snippet__image {
+	transform: scale(1.05);
+}
+
+.snippet__image {
+	grid-area: image;
+	width: 100%;
+	aspect-ratio: 4 / 3;
+	object-fit: cover;
+	margin-bottom: 100px;
+
+}
+
+.snippet__title {
+	grid-area: title;
+	margin: 0 20px 1rem 20px;
+}
+
+	.snippet__body {
+		grid-area: text;
+	} */
+
+
 .snippet {
 	margin: 10vw;
 	display: grid;
 	gap: 1em;
+	grid-template-columns: auto;
+	grid-template-rows: 180px 70px auto;
 	grid-template-areas:
 		"image"
 		"title"
@@ -246,6 +295,7 @@ transform-box: fill-box;
 		"body"
 		"button";
 }
+
 
 .snippet__image {
 	grid-area: image;
@@ -259,10 +309,10 @@ transform-box: fill-box;
 .snippet__meta {
 	font-size: 0.7rem;
 	grid-area: meta;
-	/* color: var(--clr-neutral-300); */
+	 color: var(--clr-neutral-300); 
 }
 
-.snippet__meta  {
+.snippet__meta {
 	color: var(--clr-neutral-900);
 }
 
@@ -340,8 +390,8 @@ transform-box: fill-box;
 }
 
 .dictionary {
-	  background-color: #34366A;
-  }
+	background-color: #34366a;
+}
 
 .dict {
 	overflow: hidden;
@@ -368,7 +418,7 @@ transform-box: fill-box;
 	grid-auto-columns: 38%;
 	overflow-x: auto;
 	overscroll-behavior-inline: contain;
-	
+
 	/* scroll-snap-type: inline mandatory; */
 }
 
@@ -478,12 +528,8 @@ img {
 		color: #282a67;
 	}
 
-	.snippet {
+	/* .snippet {
 		margin: 5rem;
-		/* align-items: center; */
-	}
-
-	
-
-
+		align-items: center;
+	} */
 }
