--- a/src/style.css
+++ b/src/style.css
@@ -127,6 +127,7 @@ select {
 	overflow-x: hidden;
   } */
 
+
 body {
 	font-family: var(--ff-body);
 	font-size: var(--fs-400);
@@ -227,128 +228,74 @@ section,
 	/* margin: 6rem 0; */
 }
 
+.flow > *:where(:not(:first-child)) {
+	margin-top: var(--flow-spacer, 1em);
+  }
+
 /* snippits */
 
-/* .articles__list {
-	display: grid;
-	/* grid-template-columns: repeat(4, 1fr); 
-	grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-	/* width: 90%; 
-	margin: auto;
-	max-width: 1300px;
-}
-
 .snippet {
-	display: grid;
-	grid-template-columns: auto;
-	grid-template-rows: 180px 70px auto;
-	grid-template-areas: "image" "title" "text";
-	/* gap: 100px; 
-	/* height: 100px; 
-	border-radius: 5px;
-	background: white;
-	box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.2);
-	transition: 0.2s ease;
-	/* cursor: pointer; 
-	margin: 20px;
-	overflow: hidden;
-}
-
-.snippet:hover {
-	box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.5);
-	transition: box-shadow 0.5s ease-in-out;
-}
-
-.snippet:hover > .snippet__image {
-	transform: scale(1.05);
-}
-
-.snippet__image {
-	grid-area: image;
-	width: 100%;
-	aspect-ratio: 4 / 3;
-	object-fit: cover;
-	margin-bottom: 100px;
-
-}
-
-.snippet__title {
-	grid-area: title;
-	margin: 0 20px 1rem 20px;
-}
-
-	.snippet__body {
-		grid-area: text;
-	} */
-
-
-.snippet {
-	margin: 10vw;
 	display: grid;
 	gap: 1em;
-	grid-template-columns: auto;
-	grid-template-rows: 180px 70px auto;
 	grid-template-areas:
-		"image"
-		"title"
-		"meta"
-		"body"
-		"button";
-}
-
-
-.snippet__image {
+	  "image"
+	  "title"
+	  "meta"
+	  "body"
+	  "button";
+  }
+  
+  .snippet__image {
 	grid-area: image;
 	width: 100%;
 	aspect-ratio: 4 / 3;
 	object-fit: cover;
-}
-.snippet__title {
+  }
+  .snippet__title {
 	grid-area: title;
-}
-.snippet__meta {
-	font-size: 0.7rem;
+  }
+  .snippet__meta {
 	grid-area: meta;
-	 color: var(--clr-neutral-300); 
-}
-
-.snippet__meta {
+	color: var(--clr-neutral-300);
+  }
+  
+  .snippet__meta span {
 	color: var(--clr-neutral-900);
-}
-
-.snippet .btn {
+  }
+  
+  .snippet .btn {
 	grid-area: button;
-}
-
-.snippet__title {
+  }
+  
+  .snippet__title {
 	color: var(--clr-neutral-900);
 	font-size: var(--fs-500);
-}
-
-.snippet__title a {
+  }
+  
+  .snippet__title a {
 	color: inherit;
 	text-decoration: none;
-}
-
-.snippet__title a:hover,
-.snippet__title a:focus {
+  }
+  
+  .snippet__title a:hover,
+  .snippet__title a:focus {
 	color: var(--clr-primary-500);
-}
-
-@media (min-width: 45em) {
+  } 
+  
+  @media (min-width: 45em) {
 	.snippet {
-		grid-template-areas:
-			"title image"
-			"meta image"
-			"body image"
-			"button image";
-		grid-column-gap: 4em;
-		grid-template-columns: 1fr 40%;
-		grid-template-rows: min-content min-content min-content 1fr;
+	  grid-template-areas:
+		"title image"
+		"meta image"
+		"body image"
+		"button image";
+	  grid-column-gap: 4em;
+	  grid-template-columns: 1fr 40%;
+	  grid-template-rows: min-content min-content min-content 1fr;
 	}
-}
-
-.btn {
+  }
+  
+  .btn {
 	cursor: pointer;
 	text-decoration: none;
 	display: inline-block;
@@ -357,37 +304,70 @@ section,
 	border-radius: 0.25em;
 	align-self: start;
 	justify-self: start;
-}
-
-.btn:focus {
+  }
+  
+  .btn:focus {
 	outline: 0.125em solid var(--clr-primary-400);
 	outline-offset: 0.25em;
-}
-
-.btn--primary {
+  }
+  
+  .btn--primary {
 	background: var(--clr-primary-400);
 	color: var(--clr-neutral-100);
 	font-weight: var(--fw-700);
 	border: 2px solid var(--clr-primary-400);
-}
-.btn--primary:hover,
-.btn--primary:focus {
+  }
+  .btn--primary:hover,
+  .btn--primary:focus {
 	background: var(--clr-primary-500);
-	border-color: var(--clr-primary-500);
-}
-
-.btn--neutral {
+	border-color: var(--clr-primary-500); 
+  }
+  
+  .btn--neutral {
 	background-color: var(--clr-neutral-100);
 	color: var(--clr-neutral-900);
 	font-weight: var(--fw-700);
 	border: 2px solid var(--clr-neutral-900);
-}
-
-.btn--neutral:hover,
-.btn--neutral:focus {
+  }
+  
+  .btn--neutral:hover,
+  .btn--neutral:focus {
 	color: var(--clr-neutral-100);
 	background-color: var(--clr-neutral-900);
+  }
+
+/* //////////////////////
+  Individual article page
+  /////////////////////// */
+
+.main-article {
+	margin-bottom: 3rem;
 }
+
+.main-article__figure figcaption {
+	margin: 1rem 0;
+	font-size: var(--fs-300);
+	opacity: 0.9;
+}
+
+.article-title {
+  color: var(--clr-primary-500);
+}
+
+.article-title {
+  font-size: var(--fs-700);
+}
+
+.container--narrow {
+	max-width: 65rem;
+  }
+
+  .container {
+	margin-inline: auto;
+	padding-inline: 1.5em;
+	max-width: 72rem;
+  }
+
 
 .dictionary {
 	background-color: #34366a;
@@ -497,6 +477,8 @@ img {
 	.dict-word-meaning {
 		font-size: 0.9rem;
 	}
+
+
 }
 
 /* DESKTOP */
@@ -532,4 +514,5 @@ img {
 		margin: 5rem;
 		align-items: center;
 	} */
+
 }
