--- a/src/index.njk
+++ b/src/index.njk
@@ -1,5 +1,5 @@
 ---
-title: example
+title: test
 layout: "base.njk"
 ---
   <main>
@@ -7,7 +7,7 @@ layout: "base.njk"
 
       <div class="hero-txt">
         <h1>Falafil</h1>
-        <div>People often call me "لفعة بسبعة رؤوس" I'm here to prove them right</div>
+        <div>totally not a random sentence to test my epic website</div>
       </div>
 
       <svg class="hero-svg" width="1128" height="703" viewBox="0 0 1128 703" fill="none" xmlns="http://www.w3.org/2000/svg">
