--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta
-    name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>{{title}}</title>
-    <link rel="stylesheet" href="/style.css">
-     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=Poppins&display=swap" rel="stylesheet">
-    
-</head>
-<body>
-    {{ content | safe }}
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>{{ title }}</title>
+		<link rel="icon" href="logo.svg" type="image/x-icon">
+		<link rel="stylesheet" href="/style.css" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=Poppins&display=swap"
+			rel="stylesheet"
+		/>
+	</head>
+	<body>
+		{{ content | safe }}
+	</body>
 </html>
