--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -10,8 +10,21 @@
 			href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=Poppins&display=swap"
 			rel="stylesheet"
 		/>
+		<script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 	</head>
 	<body>
 		{{ content | safe }}
+
+		<script>
+			if (window.netlifyIdentity) {
+			  window.netlifyIdentity.on("init", user => {
+				if (!user) {
+				  window.netlifyIdentity.on("login", () => {
+					document.location.href = "/admin/";
+				  });
+				}
+			  });
+			}
+		  </script>
 	</body>
 </html>
